2005-08-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/sample_colorize.c: use GTK_STOCK_APPLY and fixed
	capitalization in button label.

2005-08-23  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/poppler.c: added loading of pages as images.
	Addresses bug #138495.

2005-08-22  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/sample_colorize.c (smp_dialog): applied patch
	from David Gowers that adds mnemonics to all action area
	buttons. Fixes bug #314191.

2005-08-22  Sven Neumann  <sven@gimp.org>

	* app/core/gimpscanconvert.[ch]: converted comments to gtk-doc
	inline API docs.

2005-08-22  Sven Neumann  <sven@gimp.org>

	* tools/test-clipboard.c: added --version command-line option.

2005-08-21  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpselectionoptions.c (gimp_selection_options_gui):
	the "Antialias" toggle got lost, resurrect it.

2005-08-21  Jens Seidel  <jseidel@cvs.gnome.org>

	* app/paint/gimpconvolve.c
	* app/tools/gimpiscissorstool.c
	* app/vectors/gimpvectors-import.c
	* libgimp/gimp.c
	* m4macros/gimp-2.0.m4
	* m4macros/gimpprint.m4
	* plug-ins/common/wind.c
	* plug-ins/fits/fitsrw.c
	* plug-ins/metadata/xmp-model.c
	* plug-ins/uri/uri-backend-wget.c: Fixed the typo
	"occured" (also in all effected PO files to avoid fuzzyness)

2005-08-21  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimppencil.h
	* app/paint/gimppenciloptions.[ch]
	* app/widgets/widgets-types.h
	* app/widgets/gimptooldialog.h: don't simply typedef object
	instance structs which add no members as their parent instance
	structs. Give them their own instance structs.  Fixes gtk-doc
	confusion.

2005-08-21  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpchannel.h: removed HALF_WAY define, it's
	BOUNDARY_HALF_WAY now.

2005-08-20  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_proc_changed):
	when looking for the file extension, only look at the part after
	the last directory separator.
